tests/ui/pattern/tuple-variant-written-as-struct-pattern.stderr
error[E0769]: tuple variant `MyOption::MySome` written as struct variant
  --> $DIR/issue-17800.rs:8:9
   |
LL |         MyOption::MySome { x: 42 } => (),
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
help: use the tuple variant pattern syntax instead
   |
LL -         MyOption::MySome { x: 42 } => (),
LL +         MyOption::MySome(42) => (),
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0769`.
